--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
               </div>
             </div>
           </div>
-          <div class="col-12 col-lg-6">
+          <div class="col-12 col-lg-6 p-lg-5">
             <div class="row mb-5">
               <div
                 class="col-3"
